--- a/index.css
+++ b/index.css
@@ -43,6 +43,15 @@
     padding: 10px
 }
 
+.filter {
+    display: flex;
+}
+
+.filter-btn{
+    margin: 10px;
+    cursor: pointer;
+}
+
 .res-logo {
     width: 100%;
 }
